Final corrections Kampert + logo change

--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -145,7 +145,7 @@ This section is thus split into two subsections. The first describing the unblin
 \subsection{Flawed 20\% test sample}
 \label{subsec:unblind_20}
 
-The Fisher value distribution for the test sample is shown in Fig.~\ref{fig:Fish_bkg_test_flawed} where it is clear that no event passes the Fisher cut in any angular region. However, there are a few events which come very close to the cut line. Five events marked with a red circle were analysed in more detail. Each of them has its own unique reason with the one with zenith angle of $68.30^{\circ}$ and SD Event ID of "66106356" being the most interesting. After investigating the event in detail it was found that the accidental station cut used is insufficient. Previously, the  accidental cut (rejection of stations with Total signal < 3 VEM) is only applied to the event if there are more than 5 stations in the event. Since for this analysis due to the inclusion of MoPS and ToTd an overall increase in events is expected, which also increases the overall number of stations with accidental stations, this cut needs to be reduced a bit to take this overall increase into account. Thus, this cut was reduced to apply for events with more than 4 stations. This reduction of the cut decreases the total events passing the analysis cut by $\sim$5\% for the background training sample and $1-2$\% for the signal training sample. The Fisher coefficients and cuts change slightly. After this change in the reconstruction the test sample was obtained again and compared to the background sample as shown in Fig.~\ref{fig:Fish_bkg_test}. The other interesting events which have $\mathcal{F}$ values close to the $\mathcal{F}_{\text{cut}}$ with their respective IDs are tabulated in Tab.~\ref{tab:Interesting_events}. These events were individually evaluated. Some of these were found to have a bad time residual fit primarily because of multiple peaks observed in stations triggered by the new triggers. Since no segmentation algorithm was used for stations with MoPS and ToTd triggers, sometimes a wrong peak was selected, affecting the reconstruction for these events. A future analysis with a corrected segmentation algorithm which is functional for the new triggers MoPS and ToTd is envisaged as the next step. Such events are expected to be limited to less than $\sim$1\% of total events but still require a careful look for future analysis upgrades. A further detailed analysis where the primary mass composition is extracted via the muon production distributions, as mentioned in~\cite{PierreAuger:2014zay}, could not be performed for these events since the event had too few stations ($\sim 4$) and the shower had a very low reconstructed energy both of which hinder the ability to extract any information about the primary. Such events were also seen in previous analysis albeit not these many. For the other events no particular feature worth mentioning was observed. Some figures with more information about the interesting events from this section are also included as a part of App.~\ref{sec:app_3}. 
+The Fisher value distribution for the test sample is shown in Fig.~\ref{fig:Fish_bkg_test_flawed} where it is clear that no event passes the Fisher cut in any angular region. However, there are a few events which come very close to the cut line. Five events marked with a red circle were analysed in more detail. Each of them has its own unique reason with the one with zenith angle of $68.30^{\circ}$ and SD Event ID of "66106356" being the most interesting. After investigating the event in detail it was found that the accidental station cut used is insufficient. Previously, the  accidental cut (rejection of stations with Total signal < 3 VEM) is only applied to the event if there are more than 5 stations in the event. Since for this analysis due to the inclusion of MoPS and ToTd an overall increase in events is expected, which also increases the overall number of stations with accidental stations, this cut needs to be modified a bit to take this overall increase into account. The cut was modified and applied for events with more than 4 stations. This reduction decreases the total events passing the analysis cut by $\sim$5\% for the background training sample and $1-2$\% for the signal training sample. The Fisher coefficients and cuts change slightly. After this change in the reconstruction the test sample was obtained again and compared to the background sample as shown in Fig.~\ref{fig:Fish_bkg_test}. The other interesting events which have $\mathcal{F}$ values close to the $\mathcal{F}_{\text{cut}}$ with their respective IDs are tabulated in Tab.~\ref{tab:Interesting_events}. These events were individually evaluated. Some of these were found to have a bad time residual fit primarily because of multiple peaks observed in stations triggered by the new triggers. Since no segmentation algorithm was used for stations with MoPS and ToTd triggers, sometimes a wrong peak was selected, affecting the reconstruction for these events. A future analysis with a corrected segmentation algorithm which is functional for the new triggers MoPS and ToTd is envisaged as the next step. Such events are expected to be limited to less than $\sim$1\% of total events but still require a careful look for future analysis upgrades. A further detailed analysis where the primary mass composition is extracted via the muon production distributions, as mentioned in~\cite{PierreAuger:2014zay}, could not be performed for these events since the event had too few stations ($\sim 4$) and the shower had a very low reconstructed energy both of which hinder the ability to extract any information about the primary. Such events were also seen in previous analysis albeit not these many. For the other events no particular feature worth mentioning was observed. Some figures with more information about the interesting events from this section are also included as a part of App.~\ref{sec:app_3}. 
 
 
 
@@ -165,7 +165,7 @@ The Fisher value distribution for the test sample is shown in Fig.~\ref{fig:Fish
 
 \subsection{Reevaluated 20\% test search sample and 60\% search sample}
 \label{subsec:unblind_60}
-After the errors discovered in the initial partial unblinding were fixed by altering the reconstruction, the final unblinding was again performed in two stages. Initially a 20\% part was unblinded and then the remaining 60\% blinded sample was analysed. Again \textbf{0 neutrino candidates} were found after candidate selection. The Fisher value distributions as a function of reconstructed zenith angle for both the test and search samples are presented in Fig.~\ref{fig:Fish_bkg_test} and Fig.~\ref{fig:Fish_bkg_search} respectively. The results of the test sample (brown) and search sample (green) are overlaid over the background training sample (purple) in each plot with the dashed lines indicating the value of the $\mathcal{F}_{\text{cut}}$ obtained according to eq.~\ref{eq:fisher_poly_cut}. As it can be seen the distributions are compatible with each other within statistical fluctuations. The results of the unblinding for each angular sub-region for a combination of test and search samples is presented in Fig.~\ref{fig:Fisher_cut_2}. The distribution is scaled by the ratio of the integrals and the exponential fit is reevaluated again by comparing the Observed values to the predicted values from the fit. This comparison confirms that the exponential tail assumption is reasonable enough to determine the $\mathcal{F}_{\text{cut}}$. The goodness of the fit is once against presented in Tab.~\ref{tab:Cut_eval_unblind} in the form similar to Tab.~\ref{tab:Cut_eval}. This time for the observed values the numbers are calculated from the much larger search sample. It is found that the tails of the distributions which typically seemed to have fit badly also fit reasonably well. The events in the search sample that have $\mathcal{F}$ values close to the $\mathcal{F}_{\text{cut}}$ were again carefully checked and were found to be either due to the issues with the segmentation algorithm or known issues such as partial shower containment or large number of non-working PMTs both issues have also been seen in previous analysis. 
+After the errors discovered in the initial partial unblinding were fixed by altering the reconstruction, the final unblinding was again performed in two stages. Initially a 20\% part was unblinded and then the remaining 60\% blinded sample was analysed. Again \textbf{0 neutrino candidates} were found after candidate selection. The Fisher value distributions as a function of reconstructed zenith angle for both the test and search samples are presented in Fig.~\ref{fig:Fish_bkg_test} and Fig.~\ref{fig:Fish_bkg_search} respectively. The results of the test sample (brown) and search sample (green) are overlaid over the background training sample (purple) in each plot with the dashed lines indicating the value of the $\mathcal{F}_{\text{cut}}$ obtained according to Eq.~\ref{eq:fisher_poly_cut}. As it can be seen the distributions are compatible with each other within statistical fluctuations. The results of the unblinding for each angular sub-region for a combination of test and search samples is presented in Fig.~\ref{fig:Fisher_cut_2}. The distribution is scaled by the ratio of the integrals and the exponential fit is reevaluated again by comparing the Observed values to the predicted values from the fit. This comparison confirms that the exponential tail assumption is reasonable enough to determine the $\mathcal{F}_{\text{cut}}$. The goodness of the fit is once against presented in Tab.~\ref{tab:Cut_eval_unblind} in the form similar to Tab.~\ref{tab:Cut_eval}. This time for the observed values the numbers are calculated from the much larger search sample. It is found that the tails of the distributions which typically seemed to have fit badly also fit reasonably well. The events in the search sample that have $\mathcal{F}$ values close to the $\mathcal{F}_{\text{cut}}$ were again carefully checked and were found to be either due to the issues with the segmentation algorithm or known issues such as partial shower containment or large number of non-working PMTs both issues have also been seen in previous analysis. 
 \FloatBarrier
 \begin{figure}[h!]
   \centering
@@ -185,7 +185,7 @@ After the errors discovered in the initial partial unblinding were fixed by alte
     \begin{subfigure}[l]{.48\textwidth}
       \centering
       \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/Fisher_fit_search+test_bkg_region_64.5_67.5.pdf}
-      \caption{$ 64.5^{\circ} <\theta_{\text{Rec}} \leq 67.5^{\circ}$}
+      \caption{$ 64.5^{\circ} <\theta_{\text{Rec}} \leq 67.5^{\circ}$~\footref{foot:exp1}}
     \end{subfigure}
 
     \begin{subfigure}[r]{.48\textwidth}
@@ -204,6 +204,8 @@ After the errors discovered in the initial partial unblinding were fixed by alte
 
 \end{figure}
 \FloatBarrier
+\footnote{The events close to the Fisher cut in this plot do not show up as the printed values on the plot because it is a part of the $7\sigma$ interval.
+\label{foot:exp1} }
 \begin{table}[ht!]
   \centering
   \small
@@ -280,7 +282,7 @@ It applies to an energy range of $E_{\nu} \epsilon [1.3 \times 10^{18} - 2.5 \ti
   \label{fig:Limit_comp_1}
 \end{figure}
 
-The other dashed purple lines with central dots are the \textit{differential limits}. These are calculated by integrating the denominator of eq.~\ref{eq:integ_lim} in bins of width $\Delta = 0.5eV$ in $\log_{10}(E_{\nu})$. Mathematically for the $i^{th}$ bin this can be represented as follows:
+The other dashed purple lines with central dots are the \textit{differential limits}. These are calculated by integrating the denominator of eq.~\ref{eq:integ_lim} in bins of width $\Delta = 0.5\,$eV in $\log_{10}(E_{\nu})$. Mathematically for the $i^{th}$ bin this can be represented as follows:
 
 \begin{equation}
   \label{eq:diff_lim}
