--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -5,7 +5,7 @@
 \label{chap:EAS}
 %==============================================================================
 
-As mentioned in the previous chapter an \gls{EAS} is a cascade of high-energy particles that is produced when an \gls{UHECR}, typically a proton or a nucleus, collides with a nucleus in Earth's atmosphere. This cascade can span over hundred to thousands of meters based on the energy of the initial particle and the incoming zenith angle. EASs offer the best way to look for UHECRs since the low flux of these particles make direct detection using detectors mounted on balloons or spacecrafts not feasible. The EAS can be detected at the ground via an array of detectors. To infer the properties of the \gls{CR} from the EAS it creates, one needs to model and understand how an air shower develops in the atmosphere. This chapter describes the process of the initiation and the development of the shower induced by CRs and neutrinos. It also aims to describe the important characteristics of EASs which help in extracting the relevant information and the last part of this chapter is devoted to summarize the detection of the EASs using different detector systems. 
+As mentioned in the previous chapter an \gls{EAS} is a cascade of high-energy particles that is produced when an \gls{UHECR}, typically a proton or a nucleus, collides with a nucleus in Earth's atmosphere. This cascade can span over hundred to thousands of meters at ground based on the energy of the initial particle and the incoming zenith angle. EASs offer the best way to look for UHECRs since the low flux of these particles make direct detection using detectors mounted on balloons or spacecrafts not feasible. The EAS can be detected at the ground via an array of detectors. To infer the properties of the \gls{CR} from the EAS it creates, one needs to model and understand how an air shower develops in the atmosphere. This chapter describes the process of the initiation and the development of the shower induced by CRs and neutrinos. It also aims to describe the important characteristics of EASs which help in extracting the relevant information and the last part of this chapter is devoted to summarize the detection of the EASs using different detector systems. 
 
 \begin{figure}[t!]
     \centering
@@ -71,7 +71,7 @@ Another process that can directly impact the development of highly energy electr
 
 \subsection{Neutrino induced EAS}
 \label{sec:Dev_Nu}
-The development of a neutrino induced shower in comparison to a CR shower is important in the context of this study. Understanding the differences helps to identify the unique signature at a CR observatory like the Pierre Auger. The differences in the shower development can also help increase the sensitivity of a neutrino observatory like the IceCube. Unlike a cosmic ray particle a neutrino can interact at any depth. This is due to the low neutrino cross-section at $10^{18}\,$eV $\approx 10^{-33} \mathrm{cm^2}$  in comparison, for e.g. the proton-nucleon cross-section which is $\approx 10^{-27} \mathrm{cm^2}$. Thus, neutrino-induced showers require significantly higher neutrino energies to produce interactions with observable effects. The main channel via which an ultra-high energy neutrino can interact is either a CC or NC interaction as mentioned in the last chapter. Neutrino-induced showers involve fewer particles in the initial interaction which translates to difference in the shower development in comparison to CR induced air showers. The development of the shower and the unique signature depend on the flavor of the neutrino as shown in Fig.~\ref{fig:NU_EAS_channels}.
+The development of a neutrino induced shower in comparison to a CR shower is important in the context of this study. Understanding the differences helps to identify the unique signature at a CR observatory like the Pierre Auger. The differences in the shower development can also help increase the sensitivity of a neutrino observatory like the IceCube. Unlike a cosmic ray particle a neutrino can interact at any depth. This is due to the low neutrino cross-section at $10^{18}\,$eV $\approx 10^{-33} \mathrm{cm^2}$  in comparison, for e.g. the proton-nucleon cross-section which is $\approx 10^{-27} \mathrm{cm^2}$. The cross-section also has a slight energy dependence i.e. it increases with energy. Thus, neutrino-induced showers require significantly higher neutrino energies to increase the likeliness of interaction in the atmosphere and their subsequent detection. The ultra-high energy neutrino can undergo \gls*{DIS} with the atmospheric nucleon via CC or NC interaction as mentioned in the last chapter. Neutrino-induced showers involve fewer particles in the initial interaction which translates to difference in the shower development in comparison to CR induced air showers. The development of the shower and the unique signature depend on the flavor of the neutrino as shown in Fig.~\ref{fig:NU_EAS_channels}.
 % \begin{figure}[t!]
 %     \centering
 %     \includegraphics[width=14.5cm]{thesis_figures/EAS/Nu_EAS_channels.png}
@@ -95,7 +95,7 @@ An electron neutrino, $\nu_e$, interacting via CC interaction produces an initia
 
 A muon neutrino, $\nu_{\mu}$, also produces an initial hadron cascade but in contrast to the electron neutrino interaction the resulting muon has a very low probability to decay and mostly passes through the detector undetected. The energy carried by the muon which is usually a large fraction is invisible and only the hadronic cascade can be detected.
 
-Tau neutrinos, $\nu_{\tau}$, have a unique and particularly interesting signature among neutrino showers. The initial interaction remains the same with the production of a hadronic cascade, but the resulting tau lepton has a decay length $\approx$ 10 km. This means that depending on the atmospheric depth the tau encounters on its way to the ground, it can either decay and potentially produce an electromagnetic cascade much later than the initial hadronic cascade or not decay at all. The asynchronous cascade signature is also known as "double-bang" effect and can occur both in air or a specific medium. Tau neutrinos can also be a source of upward-going air showers which can also be detected at an EAS detector. In this case the tau neutrinos can interact in the Earth's crust or in some natural obstruction like mountains around the detector leading to production of a hadronic cascade which gets absorbed and a tau lepton which can escape and produce an electromagnetic cascade in air that can be detected. The process is unique to tau neutrinos for an EAS detector since for a $\nu_e$ both the hadronic cascade and the electron is absorbed by the obstacle whereas for the muon neutrino the resulting muon is almost impossible to detect.  
+Tau neutrinos, $\nu_{\tau}$, have a unique and particularly interesting signature among neutrino showers. The initial interaction remains the same with the production of a hadronic cascade, but the resulting tau lepton has a decay length $\approx$ 10 km at 10 PeV. This means that depending on the atmospheric depth the tau encounters on its way to the ground, it can either decay and potentially produce an electromagnetic cascade much later than the initial hadronic cascade or not decay at all. The asynchronous cascade signature is also known as "double-bang" effect and can occur both in air or a specific medium. Tau neutrinos can also be a source of upward-going air showers which can also be detected at an EAS detector. In this case the tau neutrinos can interact in the Earth's crust or in some natural obstruction like mountains around the detector leading to production of a hadronic cascade which gets absorbed and a tau lepton which can escape and produce an electromagnetic cascade in air that can be detected. The process is unique to tau neutrinos for an EAS detector since for a $\nu_e$ both the hadronic cascade and the electron is absorbed by the obstacle whereas for the muon neutrino the resulting muon is almost impossible to detect.  
 
 All three neutrino flavors can also undergo NC interactions. These also result in an initial hadronic cascade and a neutrino which usually does not interact and escapes being detected especially for an EAS detector. Thus, the signature is indistinguishable in comparison to a muon neutrino CC interaction. The probability of NC interaction is also lower than a CC interaction which also affects the overall number of EASs induced due to this channel.
 
@@ -172,4 +172,4 @@ Scintillator based particle detector arrays can be used to distinguish between t
 \label{sec:EAS_nu}
 Neutrino induced EASs can be differentiated from a regular CR induced EASs by their unique signature. Since neutrinos can interact at any atmospheric depth only the EASs that were initiated very deep in the atmosphere can be differentiated from a CR induced shower which typically starts at the top of the atmosphere. The deeper interaction means less shower development till the shower front reaches the ground in comparison to a CR induced EAS. This difference in development can be measured by the muon to electron ratio at ground via a particle detector array. Since, the neutrinos are only expected to interact and induce an EAS if the volume of the atmosphere through which they traverse is large enough. For zenith angles less than $60^{\circ}$ either the neutrinos are not expected to interact till they reach the ground and even if they do, due to the general amount of atmospheric volume at these angles the CR induced EASs are supposed to be indistinguishable from a neutrino shower, at least for a particle detector array at ground. This is due to the fact that the CR induced EASs have not developed enough to significantly reduce or lose their electromagnetic component. This leaves the primary distinguishing factor i.e. the muon to electron ratio the same for neutrino and CR induced EASs. The terminology used to determine the development of the shower in the atmosphere is the shower age and typically showers having a larger muonic component at ground are called \textit{old showers} while showers having a larger electromagnetic component at ground are called \textit{young showers}. 
 
-Thus, to detect a neutrino induced EAS using surface detector arrays the smoking gun signal is an inclined ($\approx$ zenith angle > $60^{\circ}$) "young" shower. A perfect neutrino air shower detector should have a good angular resolution and a large electron-muon signal separation. However, this signature also not completely background free. Such a signature can also be caused by deeply interacting CR primaries or highly energetic muons emitting bremsstrahlung photons both of which can also induce a young shower at large zenith angles. B meson could also be misidentified as a neutrino as shown in~\cite{article_b_MESONS}. Other processes such as low energy showers coincident with an EAS could also act as background for a neutrino detection. These have been studied in detail in ~\cite{gap_note_2013} and are negated in the analysis through the techniques developed in the reference. 
+Thus, to detect a neutrino induced EAS using surface detector arrays the smoking gun signal is an inclined ($\approx$ zenith angle > $60^{\circ}$) "young" shower. A perfect neutrino air shower detector should have a good angular resolution and a large electron-muon signal separation. However, these signatures are not completely background free. Such a signature can also be caused by deeply interacting CR primaries or highly energetic muons emitting bremsstrahlung photons both of which can also induce a young shower at large zenith angles. B meson could also be misidentified as a neutrino as shown in~\cite{article_b_MESONS}. Other processes such as low energy showers coincident with an EAS could also act as background for a neutrino detection. These have been studied in detail in ~\cite{gap_note_2013} and are negated in the analysis through the techniques developed in the reference. 
