--- a/thesis_skel/thesis_glossary.tex
+++ b/thesis_skel/thesis_glossary.tex
@@ -17,6 +17,7 @@
 \newacronym{UHE}{UHE}{ultra high energy}
 \newacronym{UHEnu}{UHE$\nu$}{Ultra high energy neutrino}
 \newacronym{UHEnus}{UHE$\nu$}{ultra high energy neutrinos}
+\newacronym{DIS}{DIS}{Deep Inelastic Scattering}
 \newacronym{SD}{SD}{Surface Detector}
 \newacronym{FD}{FD}{Fluorescence Detector}
 \newacronym{HEAT}{HEAT}{High Elevation Auger Telescope}
