--- a/cover/PhD_Submit_Title.tex
+++ b/cover/PhD_Submit_Title.tex
@@ -8,7 +8,9 @@
 %   \includegraphics[width=15mm]{../logos/blue_lowe.pdf}
 % \end{minipage}
 
-\title{\vspace*{-4.3cm}\includegraphics[width=5cm]{../logos/csm_Siegel_kleiner_f3fa80eafb.png}\\ \thesistitle }
+\title{\vspace*{-4.3cm}\includegraphics[width=2cm]{../logos/Logo_edited.pdf}\\\vspace*{0.5cm} \thesistitle }
+
+% \title{\vspace*{-4.3cm}\includegraphics[width=6cm]{../logos/BUW_Logo-schwarz.png}\\\vspace*{0.5cm} \thesistitle }
 \subtitle{\vspace*{19ex}
   \begin{otherlanguage}{ngerman}
     \textbf{\Large Dissertation}\\
