--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -23,7 +23,7 @@ To select the longer signals in the SD one of the variables that was used in ers
 
 \section{Neutrino Simulations}
 \label{sec:sim_DGL}
-To characterize the neutrino search ability of the Pierre Auger Observatory \gls{MC}simulations of EASs induced by UHE$\nu$s are required. There are six possible neutrino interaction channels due to the three possible neutrino flavors with each having two possible channels (CC or NC). However, for simulations these are envisioned to be characterized by just two sets of simulations. For the NC channel since the EAS induced by three neutrino flavors has the exact same signature for our detector only $\nu_e$ NC simulations were performed to estimate the NC contribution of all the three flavors to the final detection efficiency. 
+To characterize the neutrino search ability of the Pierre Auger Observatory \gls{MC}simulations of EASs induced by UHE$\nu$s are required. There are six possible neutrino interaction channels due to the three possible neutrino flavors with each having two possible channels (CC or NC). However, for simulations these are envisioned to be characterized by just two sets of simulations. For the NC channel since the EAS induced by three neutrino flavors has the exact same signature for our detector, only $\nu_e$ NC simulations were performed to estimate the NC contribution of all the three flavors to the final detection efficiency. 
 
 For the CC interactions, in the case of $\nu_{\mu}$ the resulting high energy muon has a high probability of evading detection. This signature is very similar to the NC interaction where the resultant secondary neutrino also carries approximately 80\% of the primary energy and probably evades detection. Thus, after taking into account the appropriate cross-section, in principle, the NC simulations can be used to also estimate the contribution of $\nu_{\mu}$ CC channel to the detection efficiency.  
 
@@ -35,7 +35,7 @@ Thus, in summary, $\nu_e$ CC and NC simulations can be considered to be good app
 \label{subsec:sim_EAS}
 CORSIKA (COsmic Ray Simulations for KASCADE)~\cite{Heck:1998vt}, a simulation software for modelling extensive air showers in the Earth's atmosphere was used to generate the EAS initiated by a $\nu_e$ primary. The simulation parameters are defined through files known as input cards. An example of the input cards used to generate simulation for this analysis is provided in Appendix~\ref{sec:app_1}. The first step involved simulating the primary neutrino-nucleon interaction which is performed in CORSIKA using the HERWIG~\cite{Corcella:2000bw} code. Further, options such as CHARM to track charm secondaries are not used. Also since only $\nu_e$ simulations are simulated, the TAULEP option which handles $\nu_{\tau}$ and $\overline{\nu_{\tau}}$ is also not used. The systematic uncertainties related to the primary interaction estimator are discussed later in section~\ref{sec:det_uncert}. CORSIKA further tracks and simulates the interactions of the primary interaction products as they travel in the atmosphere toward the ground constituting the air shower. It offers a wide variety of choices regarding the hadronic interaction models it uses to simulate these interactions. For the simulations used in this study, separate high and low energy hadronic interaction models were used. For energies higher than 200 GeV three high energy hadronic models QGSJETT-II.04~\cite{Ostapchenko:2010vb}, SIBYLL 2.3d~\cite{Riehn:2019jet} and EPOS-LHC~\cite{Pierog:2013ria} were compared. The results of the comparison are mentioned in detail in Appendix~\ref{sec:app_2}. Since the differences between the models are not that significant, for the neutrino analysis SIBYLL 2.3d was chosen as the high energy interaction model. For lower energies FLUKA~\cite{Ferrari:2005zk,Battistoni:2015epi} was chosen. The systematic uncertainties arising from different models are discussed in section~\ref{sec:det_uncert}.  
 
-To account for the curvature of the Earth which is especially important for the zenith angle range studied, the EGS4~\cite{Nelson:1990sr} Monte-Carlo method is chosen to simulate the electromagnetic component of the shower. The analytical NKG method based on eq.~\ref{eq:Lateral_dist_func} which is also available but is not used for these simulations since it vastly underestimates the maximum of the electromagnetic component due to the fact it does not account for a curved atmosphere. \gls{GDAS} measurements at Malargüe~\cite{PierreAuger:2012jsu} were used for the atmospheric profile chosen for the simulations. The magnetic field components are taken to be the default values at the Malargüe site ($\mathrm{B_x = 19.52\,\mu T}$ and $\mathrm{B_z = -14.17 \,\mu T}$). 
+To account for the curvature of the Earth which is especially important for the zenith angle range studied, the EGS4~\cite{Nelson:1990sr} Monte-Carlo method is chosen to simulate the electromagnetic component of the shower. The analytical NKG method based on eq.~\ref{eq:Lateral_dist_func} which is also available but is not used for these simulations since it vastly underestimates the maximum of the electromagnetic component due to the fact it does not account for a curved atmosphere. \gls{GDAS} measurements at Malargüe~\cite{PierreAuger:2012jsu} were used for the atmospheric profile chosen for the simulations. The magnetic field components are taken to be the default values at the Malargüe site ($\mathrm{B_x = 19.52\,}$\textmu T and $\mathrm{B_z = -14.17 \,}$\textmu T). 
 
 Further, since the computing times taken for shower simulations scale roughly with the primary energy, for primary energies >$10^{16}$eV these times become extremely long ($\sim$ weeks). Though parallel computing provides a viable solution, the technique of "thin sampling" or thinning~\cite{Hillas:1997tf} offers an alternate way to reduce the computation times while simultaneously avoiding the waste of resources. The thinning algorithm is applied to all particles below the adjustable fraction of the primary energy that emerge from an interaction. Only one of these particles is followed, and a proper weight is assigned to this particle to account for the untracked ones which are dropped based on the thinning level ($\epsilon_{\text{th}} = E/E_0$). Additional information about the application and the improvements to this process can be found in~\cite{Heck:1998gr,Kobal:2001jx}. A thinning value of $\epsilon_{\text{th}} = 10^{-6}$ is used for the simulations in this study.
 
@@ -45,7 +45,7 @@ The simulations were performed using the GRID technology~\cite{GRID_tech,LozanoB
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/Nu_analysis/AugerSlantDepth.pdf}
-  \caption{The different injected slant depths simulated for the different zenith angles in the range $60^{\circ}-75^{\circ}$. The purple line represents the atmospheric slant depth at the Pierre Auger Observatory. The blue dots represent the simulated depths for the different zenith angles. The top of the atmosphere is the x-axis of the plot at 0 g cm$^{-2}$.}
+  \caption{The different injected slant depths simulated for the different zenith angles in the range $60^{\circ}-75^{\circ}$. The purple line represents the atmospheric slant depth at the Pierre Auger Observatory. The blue dots represent the simulated depths for the different zenith angles. The top of the atmosphere is at $y$ = 0 g cm$^{-2}$.}
   \label{fig:Salant_depth_sim}
 \end{figure}
 
@@ -66,12 +66,12 @@ The simulations were performed using the GRID technology~\cite{GRID_tech,LozanoB
   \begin{tabular}{ |P{6cm}||P{0.75cm}|P{0.75cm}|P{0.75cm}|P{0.75cm}|P{0.75cm}|P{0.75cm}| }
     \hline
     $\theta_{\text{MC}}$  & 60$^\circ$& 63$^\circ$& 66$^\circ$& 69$^\circ$& 72$^\circ$ &75$^\circ$\\
-    Interaction Depths (X) & 13    & 14 & 17 & 19 & 23 & 29\\
+    Interaction Depths ($X$) & 13    & 14 & 17 & 19 & 23 & 29\\
     Max interaction depth (g cm$^{-2}$) & 1640 & 1820 & 2040 & 2330 & 2720 & 3270\\
     Min. interaction depth (g cm$^{-2}$)& 140 & 220 & 140 & 230 & 120 & 170\\
     \hline
   \end{tabular}
-  \caption{Summary of the number of showers simulated for each (E,$\theta_{\text{MC}}$,X) bin. The number of resamplings for the Offline reconstruction is also given. The simulations are performed in steps of 100 g cm$^{-2}$ between the minimum and maximum interaction depths for each zenith angle bin.}
+  \caption{Summary of the number of showers simulated for each ($E$,$\theta_{\text{MC}}$,X) bin. The number of resamplings for the Offline reconstruction is also given. The simulations are performed in steps of 100 g cm$^{-2}$ between the minimum and maximum interaction depths for each zenith angle bin.}
   \label{tab:Simulation_params}
 \end{table}
 
@@ -132,7 +132,7 @@ The next two modules decide whether the simulated event fulfils the hierarchical
 \section{Shower Reconstruction}
 \label{sec:reco}
 
-The event reconstruction is needed before any further analysis can be performed. This procedure is developed first for neutrino simulations to enhance their identification efficiency and to study the possible background. Once fixed the reconstruction is also applied on the measured data to look for neutrino like events. Shower reconstruction is also performed within the Offline framework with a module sequence that contains a combination of some standard reconstruction modules and some specific modules developed for neutrino identification in GAP note~\cite{gap_note_2013}. The reconstruction is again performed with the help of the MC task on the GRID framework based on the particular reconstruction chain developed for neutrinos. The module sequence used to reconstruct simulated neutrino showers is given below:
+The event reconstruction is needed before any further analysis can be performed. This procedure is developed first for neutrino simulations to enhance their identification efficiency and to study the possible background. Once fixed, the reconstruction is also applied on the measured data to look for neutrino like events. Shower reconstruction is also performed within the Offline framework with a module sequence that contains a combination of some standard reconstruction modules and some specific modules developed for neutrino identification in GAP note~\cite{gap_note_2013}. The reconstruction is again performed with the help of the MC task on the GRID framework based on the particular reconstruction chain developed for neutrinos. The module sequence used to reconstruct simulated neutrino showers is given below:
 
 \begingroup
   \fontfamily{cmtt}\selectfont <sequenceFile>\\
@@ -183,7 +183,7 @@ The next three modules are used to fine tune the selection of signals and later 
 
 The \textit{MonteCarloEventSelectorOG} further removes stations with distance in shower plane coordinates smaller than the inner radius used in the CORSIKA simulations. It also removes dense stations i.e. virtual stations which are sometimes used for MC studies since these are not representative of the regular SD array. 
 
-The \textit{SdTopDownSignalSelectorUGR} is a module developed specifically to carry out a Top-down selection and accidental signal rejection for neutrino like events. A summarized overview of what this module aims to accomplish is given next with a detailed description of the module already published in~\cite{gap_top_down_module}. The Top-down procedure is applicable for both the simulations and measured data whereas the accidental signal treatment is only applied for measured data. The procedure is based on~\cite{gap_top_down_proc}. Top-down selection requires a minimum of three stations with the shower front time tolerance compatibility dependent on the zenith angle. If the fit does not converge stations are successively removed and re-tested until a satisfactory fit is achieved. At the end of the procedure stations which do not contribute to the final fit are rejected while the others are marked as candidate stations. Further, the Top-down procedure also takes into account the individual traces and uses the shape for 3-fold topologies. It also rejects isolated signals akin to the Bottom-up selection but with larger tolerances to account for the wider footprint of inclined events. The module also applies an accidental signal rejection procedure before the Top-down procedure is applied to account for the atmospheric muon background based on~\cite{gap_segment_selection}. The atmospheric muons and also local showers can either trigger isolated stations or even real event stations affecting the start times and in turn the zenith angle reconstruction. This miss-reconstruction can either cause problems with the fitting of the Top-down procedure and can also lead to a worsening neutrino detection efficiency by improper background rejection. The module discards stations with total signals below 3 VEM which rejects the muonic background which typically peaks at 1 VEM. The discarding procedure is implemented only till the minimal number of stations present in the event is below 6.
+The \textit{SdTopDownSignalSelectorUGR} is a module developed specifically to carry out a Top-down selection and accidental signal rejection for neutrino like events. A summarized overview of what this module aims to accomplish is given next with a detailed description of the module already published in~\cite{gap_top_down_module}. The Top-down procedure is applicable for both the simulations and measured data whereas the accidental signal treatment is only applied for measured data. The procedure is based on~\cite{gap_top_down_proc}. Top-down selection requires a minimum of three stations with the shower front time tolerance compatibility dependent on the zenith angle. If the fit does not converge stations are successively removed and re-tested until a satisfactory fit is achieved. At the end of the procedure stations which do not contribute to the final fit are rejected while the others are marked as candidate stations. Further, the Top-down procedure also takes into account the individual traces and uses the shape for 3-fold topologies. It also rejects isolated signals akin to the Bottom-up selection but with larger tolerances to account for the wider footprint of inclined events. The module also applies an accidental signal rejection procedure before the Top-down procedure is applied to account for the atmospheric muon background based on~\cite{gap_segment_selection}. The atmospheric muons and also local showers can either trigger isolated stations or even real event stations affecting the start times and in turn the zenith angle reconstruction. This mis-reconstruction can either cause problems with the fitting of the Top-down procedure and can also lead to a worsening neutrino detection efficiency by improper background rejection. The module discards stations with total signals below 3 VEM which rejects the muonic background which typically peaks at 1 VEM. The discarding procedure is implemented only till the minimal number of stations present in the event is below 6.
 
 Since the parameters of the module were evaluated without the consideration of MoPS and ToTd, especially for the segment selection and accidental stations removal procedure, slight changes were made to the module in this analysis. The segmentation procedure was not applied to the stations which had a MoPS/ToTd trigger. These stations were only subjected to the Top-down selection procedure. Some more details about this choice are presented in Appendix~\ref{sec:app_3}. Further, the accidental station cut was lowered till the minimum number of stations present in the event are below 5 compared to 6 to account for the increased number of randomly triggered stations expected with the inclusion of new triggers. This was done after the partial unblinding of the test sample and is described in more detail in section~\ref{subsec:unblind_20}. These changes were only implemented for the sample where the new triggers are included and the sample where the new triggers are not used remains unchanged. 
 
@@ -195,7 +195,7 @@ The angular reconstruction forms the basis for neutrino detection using the SD e
 The angular reconstruction procedure uses the timing information from the stations to fit either a plane or a spherical shower front. A schematic of the procedure is shown in Fig.~\ref{fig:Plane_fit}. The axis of a shower, $\hat{a}$ is initially assumed to intersect the ground at some time using a signal weighted barycenter $x_b$ and bary-time $t_b$ of selected stations located at $x_i$ with start time $t_i$ given by :
 
 \begin{equation}
-  \vec{x_{b}} = \frac{\sum_{i} S_i x_i}{\sum_{i} S_i} \quad \text{and} \quad t_b = \frac{\sum_{i} S_i t_i}{\sum_{i} S_i}.
+  \vec{x_{b}} = \frac{\sum_{i} \sqrt{S_i} x_i}{\sum_{i} \sqrt{S_i}} \quad \text{and} \quad t_b = \frac{\sum_{i} \sqrt{S_i} t_i}{\sum_{i} \sqrt{S_i}}.
 \end{equation}
 
 \begin{figure}[t!]
@@ -205,7 +205,7 @@ The angular reconstruction procedure uses the timing information from the statio
   \label{fig:Plane_fit}
   \end{figure}
 
-The choice of the weights, taken as $\sqrt{S} $ with $S$ being the signal of the stations, has been previously evaluated using MC studies to give the best results. The barycenter also serves as the first estimate of the impact position of \textit{shower core} at the ground but is later estimated more accurately. The shower core is assumed to be moving in the $-a$ direction. Under the plane-front assumption the particles in the shower front move in a plane perpendicular to the shower axis (\textit{shower plane}) with the same speed as the core of the shower which is the speed of light, $c$, the time, $t$($\vec{x}$) when the shower plane passes through some chosen point, $\vec{x}$ (e.g. a station on the ground) can be inferred through a simple projection onto the shower axis as,
+The choice of the weights, taken as $\sqrt{S} $ with $S$ being the signal of the stations, has been previously evaluated using MC studies to give the best results. The barycenter also serves as the first estimate of the impact position of \textit{shower core} at the ground but is later estimated more accurately. The shower core is assumed to be moving in the $-\hat{a}$ direction. Under the plane-front assumption the particles in the shower front move in a plane perpendicular to the shower axis (\textit{shower plane}) with the same speed as the core of the shower which is the speed of light, $c$, the time, $t$($\vec{x}$) when the shower plane passes through some chosen point, $\vec{x}$ (e.g. a station on the ground) can be inferred through a simple projection onto the shower axis as,
 \begin{equation}
   c\,t(\vec{x}) = c\,t_b - (\vec{x}-\vec{x_b})\cdot \hat{a}.
 \end{equation}
@@ -253,14 +253,14 @@ This section includes some sanity checks to examine and verify the quality of th
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/Nu_analysis/MC_control/Slant_Depth_Profile_MC.pdf}
-  \caption{Number of showers reconstructed for each MC injected slant depth as a function of $\theta_{\text{MC}}$. The colour scale represents the number of showers reconstructed. The purple line represents the apparent slant depth for the detector. The x-axis represents the top of the atmosphere at 0 g cm$^{-2}$.}
+  \caption{Number of showers reconstructed for each MC injected slant depth as a function of $\theta_{\text{MC}}$. The colour scale represents the number of showers reconstructed. The purple line represents the apparent slant depth for the detector. The y = 0 line represents the top of the atmosphere at 0 g cm$^{-2}$.}
   \label{fig:Slant_depth_rec}
 \end{figure}
 
 \begin{figure}[h!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/Nu_analysis/MC_control/Core_position_Profile_MC_wnt_redcut.pdf}
-  \caption{Number of showers reconstructed for each MC core position. The colour scale represents the number of showers reconstructed. The black dots represent the stations in the array.}
+  \caption{Number of showers reconstructed for each MC core position for $\log_{10}(E/\text{eV}) = [16.5, 20.0]$, $\theta_{\mathrm{MC}} = [60^{\circ}, 75^{\circ}]$ and all simulated interaction depths. The colour scale represents the number of showers reconstructed. The black dots represent the stations in the array.}
   \label{fig:Core_XY_rec}
 \end{figure}
 Fig.~\ref{fig:Rec_Theta} shows the reconstructed zenith angle distributions for the CC and NC neutrino simulations. The peaks in both the distributions correspond to the simulated MC angles. It is also clear that the distribution of the NC channel (Fig.~\ref{sub:fig:Rec_theta_NC}) is slightly wider than that of the CC channel (Fig.~\ref{sub:fig:Rec_theta_CC}) pointing towards a worse resolution. This can be attributed to the reduced total detectable energy carried by an NC shower in comparison to a CC shower. It can also be seen that the distributions of both the channels (open histogram) have a long tail extending towards small values of zenith angle. This is caused due to two reasons. The angular reconstruction used in this analysis is tuned to work best for UHECR showers initiated at the top of the atmosphere with zenith angles below $60^{\circ}$. For neutrinos which can be initiated at any point in the atmosphere the reconstruction is not as efficient. This has been checked by only plotting showers having an injection slant depth < 350 g cm$^{-2}$ as shown in the filled histograms (purple). The second cause of this tail and the worsened resolution is also partially due to the inclusion of ToTd and MoPS. It was seen that the inclusion of these triggers can lead to a worsening of the resolution especially for inclined showers. This effect is more visible when these distributions are compared to reconstructions obtained without the inclusion of these triggers as shown in Fig.~\ref{fig:Rec_Theta_comp} later. The effect is due to a lack of tuned accidental signal rejection for these new triggers which affect the quality of the angular reconstruction as mentioned before. To mitigate this effect an angular fit quality cut is introduced in the analysis which significantly improves the resolution but comes at a cost of reduced efficiency.
@@ -270,7 +270,7 @@ Fig.~\ref{fig:Rec_Theta} shows the reconstructed zenith angle distributions for 
   \subcaptionbox{$\nu_e$ CC simulations.\label{sub:fig:Rec_theta_CC}}{\includegraphics[width=.48\linewidth]{thesis_figures/Nu_analysis/MC_control/Theta_rec_CC_wnt_redcut.pdf}}
   \hfill
   \subcaptionbox{$\nu_e$ NC simulations.\label{sub:fig:Rec_theta_NC}}{\includegraphics[width=.48\linewidth]{thesis_figures/Nu_analysis/MC_control/Theta_rec_NC_wnt_redcut.pdf}}
-  \caption{Reconstructed zenith angle distributions for CC and NC neutrino simulations. The open histograms represent all events while the purple filled histograms represent events with slant depth < 350 g cm$^{-2}$.}
+  \caption{Reconstructed zenith angle distributions for CC and NC neutrino simulations. The open histograms represent all events while the purple filled histograms represent events with slant depth < 350 g cm$^{-2}$. The peaks correspond to the discrete values of zenith angles simulated which are smeared due the angular resolution.}
   \label{fig:Rec_Theta}
 \end{figure}
 
@@ -324,7 +324,7 @@ The angular bias and the evolution of angular resolution with energy, slant dept
   \label{fig:Res_comp}
 \end{figure}
 \FloatBarrier
-The overall summary of the reconstructed events for both the sample for all energies, channels (CC + NC) as a function of zenith angle is given in Fig.~\ref{fig:Events_vs_angle_summary}. The disproportionate total number of events at lower energies in comparison are due to differences in resampling. The gain in total events is higher for lower energies and decreases fast as the energy increases. This is because the ToTd and MoPS were designed to be sensitive to small air shower signal which is typically the case of a neutrino induced shower of low energy. The ToTd and MoPS also have a zenith dependence and are more effective for lower zenith angles. This is because at lower zenith angles the neutrino induced shower still has significant electromagnetic component which ToTd and MoPS are more sensitive to. As the zenith angle increases even a neutrino induced shower becomes older and this is one of the reasons the overall neutrino detection efficiency decreases which is discussed later in section~\ref{subsec:nu_sel_nudeteff}. Although not shown the overall gain in events is also higher for the CC channel in comparison to the NC channel. 
+The overall summary of the reconstructed events for both the sample for all energies, channels (CC + NC) as a function of zenith angle is given in Fig.~\ref{fig:Events_vs_angle_summary}. The disproportionate total number of events at lower energies in comparison are due to differences in resampling. The gain in total events is higher for lower energies and decreases fast as the energy increases. This is because the ToTd and MoPS were designed to be sensitive to small air shower signal which is typically the case of a neutrino induced shower of low energy. The ToTd and MoPS also have a zenith dependence and are more effective for lower zenith angles. This is because at lower zenith angles the neutrino induced shower still has significant electromagnetic component which ToTd and MoPS are more sensitive to. As the zenith angle increases ToTd and MoPS help in increasing the identification efficiency for neutrinos which interact closer to the array and still have a significant electromagnetic component. Due to the large atmospheric depth at these angles for the farther interaction points the neutrino induced shower becomes older and more muonic reducing the positive effect of the new triggers. Although not shown the overall gain in events is also higher for the CC channel in comparison to the NC channel. 
 
 \begin{figure}[h!]
   \centering
@@ -774,9 +774,9 @@ Figure~\ref{fig:Eff_v_theta_CC_E} compares the neutrino detection efficiency as 
 
 \begin{figure}[h!]
   \centering
-  \subcaptionbox{$\mathrm{log_{10}(E_\nu}/\text{ev})$ = 18.5, $\theta_{\text{MC}}$ = 66$^{\circ}$.\label{sub:fig:Eff_comp_18_5_66}}{\includegraphics[width=.48\linewidth]{thesis_figures/Nu_analysis/Nu_eff/Efficiency_vs_X1_18_5_66.pdf}}
+  \subcaptionbox{$\mathrm{log_{10}(E_\nu}/\text{eV})$ = 18.5, $\theta_{\text{MC}}$ = 66$^{\circ}$.\label{sub:fig:Eff_comp_18_5_66}}{\includegraphics[width=.48\linewidth]{thesis_figures/Nu_analysis/Nu_eff/Efficiency_vs_X1_18_5_66.pdf}}
   \hfill
-  \subcaptionbox{$\mathrm{log_{10}(E_\nu}/\text{ev})$ = 19.5, $\theta_{\text{MC}}$ = 72$^{\circ}$.\label{sub:fig:Eff_comp_19_5_72}}{\includegraphics[width=.48\linewidth]{thesis_figures/Nu_analysis/Nu_eff/Efficiency_vs_X1_19_5_72}}
+  \subcaptionbox{$\mathrm{log_{10}(E_\nu}/\text{eV})$ = 19.5, $\theta_{\text{MC}}$ = 72$^{\circ}$.\label{sub:fig:Eff_comp_19_5_72}}{\includegraphics[width=.48\linewidth]{thesis_figures/Nu_analysis/Nu_eff/Efficiency_vs_X1_19_5_72}}
   \caption{Comparison of the trigger (blue) and neutrino identification (green) efficiency as a function of injected slant depth for two different angles and energies for $\nu_e$ CC sample. The top of the atmosphere is at 0 g cm$^{-2}$ and the SD depth changes according to the angle as shown in Fig.~\ref{fig:Slant_depth_rec}.} 
   \label{fig:Eff_X_comp}
 \end{figure}
