--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -70,7 +70,7 @@ The 1.5 km grid spacing is commonly referred to as SD-1500. There are further s
 \subsection{Calibration of SD}
 \label{sec:Sur_det_calib}
 
-The PMT signals in the WCDs are digitized by a 40 MHz 10 bit \textit{\acrlongpl{FADC}} (\acrshortpl{FADC})~\cite{PierreAuger:2005znw}. One of the signals is taken from the anode of the PMT and is called the \textit{low gain} channel and the other is taken by the last dynode and is amplified by a factor of 32 and is called the \textit{high gain} channel. The two signals provide sufficient precision and range to record both the signals produced near the shower core ($\sim$1000 particles/$\mathrm{\mu}$s) and those produced far from the core ($\sim$1 particles/$\mathrm{\mu}$s). The signal trace is recorded at a sampling rate of 40 MHz with a total of 768 bins leading to each bin width corresponding to 25 ns. Due to varying electronics across the WCDs a robust procedure is needed to calibrate each station to a universal unit of measurement for the SD. Also, due to the remoteness of the WCDs such a procedure needs to be performed locally for each station to allow for its functioning even in the case of individual broken PMTs. The unit of measurement used to calibrate the SD stations is called \textit{\acrlong{VEM}} (\acrshort{VEM}). This is the charge deposited by a \gls{VCT} muon in the WCD station. The SD station by itself cannot select these particular muons but the normal SD measurement of all atmospheric muons has been studied in comparison with a muon telescope that only triggers these VCTs for a reference tank~\cite{PierreAuger:2005cju}. This measurement is used to calibrate the SD.
+The PMT signals in the WCDs are digitized by a 40 MHz 10 bit \textit{\acrlongpl{FADC}} (\acrshortpl{FADC})~\cite{PierreAuger:2005znw}. One of the signals is taken from the anode of the PMT and is called the \textit{low gain} channel and the other is taken by the last dynode and is amplified by a factor of 32 and is called the \textit{high gain} channel. The two signals provide sufficient precision and range to record both the signals produced near the shower core ($\sim$1000 particles/\textmu s) and those produced far from the core ($\sim$1 particles/\textmu s). The signal trace is recorded at a sampling rate of 40 MHz with a total of 768 bins leading to each bin width corresponding to 25 ns. Due to varying PMT gains across the WCDs a robust procedure is needed to calibrate each station to a universal unit of measurement for the SD. Also, due to the remoteness of the WCDs such a procedure needs to be performed locally for each station to allow for its functioning even in the case of individual broken PMTs. The unit of measurement used to calibrate the SD stations is called \textit{\acrlong{VEM}} (\acrshort{VEM}). This is the charge deposited by a \gls{VCT} muon in the WCD station. The SD station by itself cannot select these particular muons but the normal SD measurement of all atmospheric muons has been studied in comparison with a muon telescope that only triggers these VCTs for a reference tank~\cite{PierreAuger:2005cju}. This measurement is used to calibrate the SD.
 
 \begin{figure}[h!]
   \centering
@@ -83,7 +83,7 @@ The PMT signals in the WCDs are digitized by a 40 MHz 10 bit \textit{\acrlongpl
   \label{fig:SD_VEM_calib}
 \end{figure}
 
-To perform the calibration charge distribution, $Q_{\text{VEM}}^{\text{peak}}$, and the pulse height, $I_{\text{VEM}}^{\text{peak}}$, both for the individual PMTs and their sums, are compared to the measurements done with a muon telescope as shown in Fig.~\ref{fig:SD_VEM_calib}. The first peak in the figure for the PMT measurement is caused due to low energy particles while the second peak is produced by the atmospheric muons. This peak corresponds to $Q_{\text{VEM}}^{\text{peak}}$ $\simeq$ 1.03 VEM for the sum and $\simeq$1.09 VEM for each PMT. The shift in comparison to the muon telescope measurement is caused by the convolution of photo-electron statistics on an asymmetric peak in the track length distribution and local light collection effects. This peak is used to obtain a conversion for the integrated signal of the PMT to VEM units. In addition to this, since the subsequent trigger for the SD also requires a measure of the current $I_{\text{VEM}}$, this value also needs to be converted and calibrated to VEM units~\cite{PierreAuger:2005znw}. The same technique as the charge calibration is employed since the VCTs also produce a peak in the pulse height histograms. The calibration is performed every 60 s and sent to CDAS thus for an incoming event, calibration data is available for the preceding minute ensuring high calibration accuracy. 
+To perform the calibration charge distribution, $Q_{\text{VEM}}^{\text{peak}}$, and the pulse height, $I_{\text{VEM}}^{\text{peak}}$, both for the individual PMTs and their sums, are compared to the measurements done with a muon telescope as shown in Fig.~\ref{fig:SD_VEM_calib}. The first peak in the figure for the PMT measurement is caused due to low energy particles while the second peak is produced by the atmospheric muons. This peak corresponds to $Q_{\text{VEM}}^{\text{peak}}$ $\simeq$ 1.03 VEM for the sum and $\simeq$1.09 VEM for each PMT. The shift in comparison to the muon telescope measurement is caused by the convolution of photo-electron statistics on an asymmetric peak in the track length distribution and local light collection effects. Furthermore, the black histogram is integrated across all zenith angles with $<\theta> \sim 20^{\circ}$. This peak is used to obtain a conversion for the integrated signal of the PMT to VEM units. In addition to this, since the subsequent trigger for the SD also requires a measure of the current $I_{\text{VEM}}$, this value also needs to be converted and calibrated to VEM units~\cite{PierreAuger:2005znw}. The same technique as the charge calibration is employed since the VCTs also produce a peak in the pulse height histograms. The calibration is performed every 60 s and sent to CDAS thus for an incoming event, calibration data is available for the preceding minute ensuring high calibration accuracy. 
 
 \subsection{SD Trigger system}
 \label{sec:Sur_det_trig}
@@ -98,7 +98,7 @@ A schematic of the logic of the trigger system is shown in Fig.~\ref{fig:SD_trig
 
 \subsubsection{Old triggers}
 \label{sec:Sur_det_trig_old}
-The T1 trigger consists of two parts/modes both of which need to be satisfied for an event to be checked for the possibility of higher level triggers. One of them is a basic \gls{TH} that requires the signal for each of the three PMTs to be above 1.75$I_{\text{VEM}}^{\text{peak}}$. If there are only one or two PMTs active then the requirement changes to >2.8$I_{\text{VEM}}^{\text{peak}}$ or >2$I_{\text{VEM}}^{\text{peak}}$ respectively. The TH mode is used to select large signals which are expected for very inclined CR induced showers ($\theta >60^{\circ}$) which are predominantly muons. It reduces the rate for the atmospheric muons from 3 KHz to a 100 Hz. The second mode for the T1 trigger is called \gls{ToT}. ToT requires 13 or more of the 25 ns time bins within a 3$\mu$s window to be above a threshold of 0.2$I_{\text{VEM}}^{\text{peak}}$ for at least two PMTs. Since this mode filters for signals spread in time it is sensitive to low energy vertical showers nearer to the core and also high energy inclined showers far from the shower core. It is also very effective in filtering random muonic background which typically has a spread of 150ns compared to the 325 ns spread for ToT fulfilment. The rate for ToT at each detector is $\sim$1.2 KHz with the main contribution being two consecutive muons arriving within the time window. 
+The T1 trigger consists of two parts/modes both of which need to be satisfied for an event to be checked for the possibility of higher level triggers. One of them is a basic \gls{TH} that requires the signal for each of the three PMTs to be above 1.75$I_{\text{VEM}}^{\text{peak}}$. If there are only one or two PMTs active then the requirement changes to >2.8$I_{\text{VEM}}^{\text{peak}}$ or >2$I_{\text{VEM}}^{\text{peak}}$ respectively. The TH mode is used to select large signals which are expected for very inclined CR induced showers ($\theta >60^{\circ}$) which are predominantly muons. It reduces the rate for the atmospheric muons from 3 KHz to a 100 Hz. The second mode for the T1 trigger is called \gls{ToT}. ToT requires 13 or more of the 25 ns time bins within a 3 \textmu s window to be above a threshold of 0.2$I_{\text{VEM}}^{\text{peak}}$ for at least two PMTs. Since this mode filters for signals spread in time it is sensitive to low energy vertical showers nearer to the core and also high energy inclined showers far from the shower core. It is also very effective in filtering random muonic background which typically has a spread of 150\,ns compared to the 325 ns spread for ToT fulfilment. The rate for ToT at each detector is $\sim$1.2 KHz with the main contribution being two consecutive muons arriving within the time window. 
 
 \subsubsection{New triggers}
 \label{sec:Sur_det_trig_new}
@@ -135,7 +135,7 @@ The ToTd trigger was first proposed internally in~\cite{gap_note_2009}. The trig
   \label{fig:ToTd+MoPSworking}
 \end{figure}
 
-The MoPS trigger~\cite{gap_note_2011} was implemented to achieve a similar goal as ToT and ToTd i.e. a better separation between the air shower signal from the mostly muonic background. It is designed to do so by counting the number of positive steps (cumulation of successive increases) in the \gls{FADC} trace within a 3 $\mu$s sliding window. These steps are expected to be above a certain threshold (5xRMS noise) and below a maximum value ($\sim$0.5 VEM). The MoPS trigger is satisfied if more than 4 positive steps are counted during the sliding window in at least 2 PMTs. The expected rates both from simulations and data taking are found to be <2 Hz. MoPS is even better at recovering lower signals compared to ToT and ToTd, thus improving the overall trigger efficiency. Both ToTd and MoPS are implemented as an OR logic with the ToT condition. An example of a signal that passes the MoPS trigger is shown in Fig.~\ref{sub:fig:MoPS_working}.
+The MoPS trigger~\cite{gap_note_2011} was implemented to achieve a similar goal as ToT and ToTd i.e. a better separation between the air shower signal from the mostly muonic background. It is designed to do so by counting the number of positive steps (cumulation of successive increases) in the \gls{FADC} trace within a 3 \textmu s sliding window. These steps are expected to be above a certain threshold (5xRMS noise) and below a maximum value ($\sim$0.5 VEM). The MoPS trigger is satisfied if more than 4 positive steps are counted during the sliding window in at least 2 PMTs. The expected rates both from simulations and data taking are found to be <2 Hz. MoPS is even better at recovering lower signals compared to ToT and ToTd, thus improving the overall trigger efficiency. Both ToTd and MoPS are implemented as an OR logic with the ToT condition. An example of a signal that passes the MoPS trigger is shown in Fig.~\ref{sub:fig:MoPS_working}.
 
 % \begin{figure}[t!]
 %   \centering
@@ -193,7 +193,7 @@ The new triggers particularly improve the trigger efficiency and sensitivity for
 \label{sec:Sur_det_trig_array}
 T2 level triggers aim to apply higher constraints to T1 triggers. A T1-ToT trigger is automatically updated to a T2-ToT trigger while a T1-TH trigger requires the signal to pass a higher threshold condition of >3.2$I_{\text{VEM}}^{\text{peak}}$ for three coincident PMTs to get upgraded to T2-TH. For two (one) working PMTs the threshold is stricter at >3.8 (4.5)$I_{\text{VEM}}^{\text{peak}}$. After the T2 level, the expected station rate of events drops to $\sim$23 Hz. The T2 level triggers from all stations are sent to the CDAS to form a global trigger.
 
-The T3 level aims to build a condition based on both spatial and temporal combinations of stations that have passed the T2 condition. It again has two modes with only one needed to be satisfied to form a successful T3. Both of these conditions use a unit of detector called the crown, $C_n$. The crown as shown in Fig.~\ref{fig:T3_config} is a set of concentric hexagons centred around each station with $n$ giving the order of the surrounding hexagons, 1 being the nearest. The first mode $ToT2C_1\&3C_2$ (\ref{sub:fig:T3_config_1}) requires three SD stations which have passed T2-ToT criteria. It further requires at least one station to be located in the first crown denoted by $2C_1$ and the last to be located in the second crown ($3C_2$). The trigger is efficient in selecting compact vertical showers ($\theta < 60^{\circ}$) and selects about 90\% of the physical events at the array. The second mode $2C_1\&3C_2\&4C_4$ (\ref{sub:fig:T3_config_2}) is less restrictive and aims to select showers with moderate compactness. It requires a 4-fold coincidence of stations having any type of T2s (T2-ToT or T2-TH). The first two neighbouring stations must be again located in the first and second crown, but the last station can be as far as the fourth crown. This mode is more efficient in selecting inclined showers which typically being rich in muons have a sparse detector triggering pattern. Along with the spatial requirements both of the modes also require each of the T2 triggers in the stations to be within (3+5C$_n$)$\mathrm{\mu}$s of the first one. Once either of the modes is satisfied all the FADC signals from the detectors passing T2 as well as signals from the detectors only passing T1 which are within 30$\mathrm{\mu}$s of the T3 are stored by CDAS as a part of the event. This process is described in more detail in~\cite{Auger:2015}. With the present trigger setup, the observatory records about 3 million SD events per year~\cite{Auger:2015}. 
+The T3 level aims to build a condition based on both spatial and temporal combinations of stations that have passed the T2 condition. It again has two modes with only one needed to be satisfied to form a successful T3. Both of these conditions use a unit of detector called the crown, $C_n$. The crown as shown in Fig.~\ref{fig:T3_config} is a set of concentric hexagons centred around each station with $n$ giving the order of the surrounding hexagons, 1 being the nearest. The first mode $ToT2C_1\&3C_2$ (\ref{sub:fig:T3_config_1}) requires three SD stations which have passed T2-ToT criteria. It further requires at least one station to be located in the first crown denoted by $2C_1$ and the last to be located in the second crown ($3C_2$). The trigger is efficient in selecting compact vertical showers ($\theta < 60^{\circ}$) and selects about 90\% of the physical events at the array. The second mode $2C_1\&3C_2\&4C_4$ (\ref{sub:fig:T3_config_2}) is less restrictive and aims to select showers with moderate compactness. It requires a 4-fold coincidence of stations having any type of T2s (T2-ToT or T2-TH). The first two neighbouring stations must be again located in the first and second crown, but the last station can be as far as the fourth crown. This mode is more efficient in selecting inclined showers which typically being rich in muons have a sparse detector triggering pattern. Along with the spatial requirements both of the modes also require each of the T2 triggers in the stations to be within (3+5C$_n$)\,\textmu s of the first one. Once either of the modes is satisfied all the FADC signals from the detectors passing T2 as well as signals from the detectors only passing T1 which are within 30\,\textmu s of the T3 are stored by CDAS as a part of the event. This process is described in more detail in~\cite{Auger:2015}. With the present trigger setup, the observatory records about 3 million SD events per year~\cite{Auger:2015}. 
 
 % \begin{figure}[t!]
 %   \centering
@@ -218,7 +218,7 @@ The T5 fiducial triggers help improve the quality of the showers selected, espec
 \section{AugerPrime}
 \label{sec:Aug_prime}
 
-AugerPrime~\cite{ANASTASI2022167497} also called Auger Phase 2,  is the ongoing upgrade of the Pierre Auger Observatory to improve its sensitivity and detection capabilities. The upgrade aims to both improve the already present detector systems and also plans to add new components to the observatory. One of the key aims of the \textit{AugerPrime} upgrade is to improve the estimation of the primary CR mass measured by the SD. This is done by the installation of plastic scintillators, \textit{Surface Scintillator Detectors} (SSDs)~\cite{Cataldi:2021uwd} on top of the WCD tanks. The differing responses of WCDs and the SSDs to the electromagnetic and muonic components help enhance the overall mass sensitivity of the detector for vertical showers. The upgrade also replaces the SD electronics (\textit{unified board} and SD front-end board) with the \textit{\acrlong{UUB}} (\acrshort{UUB})~\cite{PierreAuger:2021nnx} and adds a \textit{small} PMT (sPMT)~\cite{PierreAuger:2023clx} to the WCD. The UUBs allow for better station level processing power to account for the SSD and also add a faster sampling rate and better timing accuracy for the SD. The sPMT helps increase the dynamic range of the WCD by reducing the saturated signals in the stations closest to the shower axis. The \textit{AugerPrime} upgrade also includes the deployment of plastic scintillators beneath the WCD tanks, the \acrshort{UMD}~\cite{AbdulHalim:2023ZF} as an extension of AMIGA~\cite{PierreAuger:2021fhj} across the SD-750 and SD-433 sub arrays. The UMD is sensitive to the penetrating muon component of the EAS is very useful for extending the lower energy detection range of the observatory and can also help in photon searches~\cite{PierreAuger:2023nkh}. Deployment of radio antennas on top of each WCD to form \textit{\acrlong{RD}}~\cite{Horandel:2023XL} is also a part of \textit{AugerPrime}. This will allow for the measurement of the radio component of the EAS which originates primarily from the electromagnetic component. Such a measurement especially at very inclined zenith angles will allow for an improved mass estimation even for higher zenith angles where the SSD is insensitive. Additionally, increasing the duty cycle of the FD by operating the telescopes during higher night sky brightness periods with reduced PMT gain is also a part of the upgrade. 
+AugerPrime~\cite{ANASTASI2022167497} also called Auger Phase 2,  is the ongoing upgrade of the Pierre Auger Observatory to improve its sensitivity and detection capabilities. The upgrade aims to both improve the already present detector systems and also plans to add new components to the observatory. One of the key aims of the \textit{AugerPrime} upgrade is to improve the estimation of the primary CR mass measured by the SD. This is done by the installation of plastic scintillators, \textit{Surface Scintillator Detectors} (SSDs)~\cite{Cataldi:2021uwd} on top of the WCD tanks. The differing responses of WCDs and the SSDs to the electromagnetic and muonic components help enhance the overall mass sensitivity of the detector for vertical showers. The upgrade also replaces the SD electronics (\textit{unified board} and SD front-end board) with the \textit{\acrlong{UUB}} (\acrshort{UUB})~\cite{PierreAuger:2021nnx} and adds a \textit{small} PMT (sPMT)~\cite{PierreAuger:2023clx} to the WCD. The UUBs allow for better station level processing power to account for the SSD and also add a faster sampling rate and better timing accuracy for the SD. The sPMT helps increase the dynamic range of the WCD by reducing the saturated signals in the stations closest to the shower axis. The \textit{AugerPrime} upgrade also includes the deployment of plastic scintillators underground in the vicinity of the WCD tanks, the \acrshort{UMD}~\cite{AbdulHalim:2023ZF} as an extension of AMIGA~\cite{PierreAuger:2021fhj} across the SD-750 and SD-433 sub arrays. The UMD is sensitive to the penetrating muon component of the EAS is very useful for extending the lower energy detection range of the observatory and can also help in photon searches~\cite{PierreAuger:2023nkh}. Deployment of radio antennas on top of each WCD to form \textit{\acrlong{RD}}~\cite{Horandel:2023XL} is also a part of \textit{AugerPrime}. This will allow for the measurement of the radio component of the EAS which originates primarily from the electromagnetic component. Such a measurement especially at very inclined zenith angles will allow for an improved mass estimation even for higher zenith angles where the SSD is insensitive. Additionally, increasing the duty cycle of the FD by operating the telescopes during higher night sky brightness periods with reduced PMT gain is also a part of the upgrade. 
 
 In the context of this thesis, the data from the ongoing upgrade and the preceding test array were not used. However, it is important to mention that the higher sampling rate available with the UUBs and the addition of RD could offer a way to improve the current neutrino analysis. The higher sampling rate could help in reducing the effect of the background muons especially at lower zenith angles ($\sim 60^{\circ}$) whereas the RD in conjunction with WCD could help improve the neutrino detection efficiency for higher zenith angles ($\gtrsim 75^{\circ}$) by improving the T3 efficiency. Also, a general increase in the statistics and continued data taking till the 2030s will help enhance the limits in case of non-detection of cosmogenic neutrinos which have further important implications for the CR spectrum especially for the cutoff as discussed before. The upgrade will also help improve the multi-messenger astronomy capabilities of the observatory. 
 
