Final changes before library print

--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -80,7 +80,7 @@ The sources of systematic uncertainties considered for this analysis are discuss
 \begin{description}
   \item \textbf{Primary interaction generator:} For the simulations used in this analysis which is based on CORSIKA 7.2 the only available option for the primary interaction generator is the HERWIG~\cite{Corcella:2000bw} code. Thus, it was not possible to compare the differences that could arise due to the use of different primary interaction generators. These systematic uncertainties were taken from ~\cite{gap_systematics} where PYTHIA~\cite{Sjostrand:2006za} and several versions of HERWIG are compared for CORSIKA 6. The uncertainties were found to be [+2.6\%, 3.7\%]. 
   \item \textbf{Parton Distribution function:} Again the uncertainties are taken from~\cite{gap_systematics} since this functionality is not available in CORSIKA 7. The systematic uncertainties on exposure quoted by the source are [+4\%, -5\%].
-  \item \textbf{Hadronic interaction models:} The choice of the hadronic model used for the simulations can also lead to systematic uncertainties since most of these models are tuned on different accelerator datasets measured at much lower energies than the ones investigated in this analysis. Since the systematic uncertaintes due to the hadronic models calculated in this analysis were found to be below the statistic uncertainties. A realistic estimate of the systematic uncertainties due to the hadronic models was taken from~\cite{gap_systematics}, particularly the uncertainty between QGSJET-II and SIBYLL which is the closest analogy to this study where SIBYLL 2.3d was chosen as the reference model. The systematic uncertainties were chosen to be $+ 1\%$.
+  \item \textbf{Hadronic interaction models:} The choice of the hadronic model used for the simulations can also lead to systematic uncertainties since most of these models are tuned on different accelerator datasets measured at much lower energies than the ones investigated in this analysis. Since the systematic uncertainties due to the hadronic models calculated in this analysis were found to be below the statistic uncertainties. A realistic estimate of the systematic uncertainties due to the hadronic models was taken from~\cite{gap_systematics}, particularly the uncertainty between QGSJET-II and SIBYLL which is the closest analogy to this study where SIBYLL 2.3d was chosen as the reference model. The systematic uncertainties were chosen to be $+ 1\%$.
   \item \textbf{Shower simulator and thinning algorithm:} The systematic uncertainties due to the differing shower simulation programs was estimated through the comparison quoted in~\cite{Huege:2022xbo} for both hadronic cascades and electromagnetic showers. The differences seen in different softwares are of the order $\sim 15\%$ which agrees with the results from~\cite{gap_systematics}. The uncertainties due to thinning were also calculated in~\cite{gap_systematics} and were found to be $\sim 7\%$.
   \item \textbf{Detector simulation:} The differences in the detector simulation software i.e. a GEANT4 based approach used in this analysis to other approaches is already compared in~\cite{gap_note_det_systematics}. The systematic uncertainties were found to be $\pm 5\%$. Further, in this analysis the simulated showers were reconstructed using two different Offline tags with no significant differences observed in the final exposure. 
   \item \textbf{Number of Hexagons:} To calculate the total numbers of hexagons it is implicitly assumed that all stations contribute equally. However, if the new triggers are not active due to problems with two PMTs in a given station, such a hexagon might not contribute the same as the other. This points to a systematic error associated with using the hexagon files as they are, as a station with one PMT is counted full but likely should not. For a neutrino analysis with new triggers, the unique situation of an active WCD station which is unable to use these triggers needs to be accounted for. The systematic uncertainty associated with this effect was calculated by looking at the average number of stations with only one functional PMT over time. The uncertainty associated with this effect was found to be $\leq \pm 2\%$.
@@ -230,7 +230,7 @@ After the errors discovered in the initial partial unblinding were fixed by alte
 \end{table}
 \section{Diffuse limit for the UHE neutrino flux}
 \label{sec:diff_limit}
-Since no neutrino candidate was found in this analysis, an upper limit to the flux of the incoming UHE$\nu$s can be estimated. Let flux per unit area, \textit{A}, energy, solid angle $\Omega$ and time be denoted by $\phi(E_{\nu}) = \frac{d^6 N_{\nu}}{dE_{\nu}\,d\Omega\, dA \, dt}$. The expected number of detected neutrinos can be calculated by folding in the total exposure $\xi_{tot}(E_{\nu})$ with flux as follows,
+Since no neutrino candidate was found in this analysis, an upper limit to the flux of the incoming UHE$\nu$s can be estimated. Let flux per unit area, \textit{A}, energy, solid angle $\Omega$ and time be denoted by $\phi(E_{\nu}) = \frac{d^6 N_{\nu}}{dE_{\nu}\,d\Omega\, dA \, dt}$. The expected number of detected neutrinos can be calculated by folding in the total exposure $\xi_{\mathrm{tot}}(E_{\nu})$ with flux as follows,
 
 \begin{equation}
   N_{\text{expected}} = \int_{E_{\nu_{\text{min}}}}^{E_{\nu_{\text{max}}}} \phi(E_{\nu}) \cdot \xi_{\text{tot}}(E_{\nu}) \cdot dE_{\nu}
@@ -302,7 +302,7 @@ Assuming constant exposure and flux in each energy bin the differential limit ca
   \label{fig:Limit_comp_2}
 \end{figure}
 
-These limits provide a way to denote the sensitivity of the detector for different energies. As it can be seen from the Fig.~\ref{fig:Limit_comp_1} for the Down-going Low analysis the Pierre Auger Observatory is the most sensitive for energies $\sim$1 EeV. 
+These limits provide a way to denote the sensitivity of the detector for different energies. As it can be seen from the Fig.~\ref{fig:Limit_comp_1} for the Down-going Low analysis the Pierre Auger Observatory is the most sensitive for energies $\sim$10 EeV. 
 
 Both limits are also compared to the results from the previous analysis in Fig.~\ref{fig:Limit_comp_1}. As it was seen in the exposure comparison it is clear that the new triggers help improve the sensitivity at lower energies. For higher energies the improvements to the upper-limit for the diffuse flux of UHE${\nu}$s though not as significant is still substantial. This improvement can be attributed to the changes in the Fisher analysis. The integral flux limit sees an improvement of $\sim$ 40\%. 
 
