--- a/thesis_skel/thesis_acknowledge.tex
+++ b/thesis_skel/thesis_acknowledge.tex
@@ -19,7 +19,7 @@ In India the first cousins are like siblings and I have been lucky to have a bun
 
 My family now also includes my girlfriend Lélia Nagel. I am glad that I met you right before I started my thesis. Having a real doctor by my side who has dedicated her life to help others constantly grounds me. You have been a constant source of support and motivation. You have been my rock and my biggest cheerleader. Thank you for always being there for me and for making me a better person. I cannot wait to spend more time with you and make more memories.
 
-Lastly, I have been blessed with a wonderful set of friends who have been my family away from home. Thank you to Svenja for being my best friend through the seven years I have been in Germany. We might not live in the same city any more, but you are always just a phone call away. Thank you to Prakhar, Lex, Rieka, Jan and Naseem for always keeping tabs on me and making sure I am doing fine. Starting this thesis during the pandemic was not easy but having the best roommates in the world in Steve and Fiona made it a lot of fun. A simple hi in the kitchen or a beer in the garden was all I needed to keep going. 
+Lastly, I have been blessed with a wonderful set of friends who have been my family away from home. Thank you to Svenja for being my best friend through the seven years I have been in Germany. We might not live in the same city any more, but you are always just a phone call away. Thank you to Prakhar, Amitayus, Lex, Rieka, Jan and Naseem for always keeping tabs on me and making sure I am doing fine. Starting this thesis during the pandemic was not easy but having the best roommates in the world in Steve and Fiona made it a lot of fun. A simple hi in the kitchen or a beer in the garden was all I needed to keep going. 
 
 A special thanks to Dr. Jannis Pawlowsky, Dr. Leonel Morejon and Fabian Becker for helping with the editing of this thesis. Thank you to Michael Schimp for always answering my various questions and solving my problems without which this thesis would have never been completed. A big thanks to the whole Astroteilchen group for the academic and moral support and all the laughs we have shared. 
 
